--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/auth.html
@@ -1,17 +1,17 @@
 ﻿<div id="signin" class="container">
     <div class="row" ng-show="twitterLink && facebookLink && vkLink">
         <div class="col-md-6 col-md-offset-3 indent">
-            <a ng-href={{twitterLink}} class="btn btn-block twitter-button">
+            <a ng-href={{twitterLink}} class="btn btn-block twitter-button social-button">
                 <i class="fa fa-twitter"></i> Sign in with Twitter
             </a>
         </div>
         <div class="col-md-6 col-md-offset-3 indent">
-            <a ng-href={{facebookLink}} class="btn btn-block fb-button">
+            <a ng-href={{facebookLink}} class="btn btn-block fb-button social-button">
                 <i class="fa fa-facebook"></i> Sign in with Facebook
             </a>
         </div>
         <div class="col-md-6 col-md-offset-3 indent">
-            <a ng-href={{vkLink}} class="btn btn-block vk-button">
+            <a ng-href={{vkLink}} class="btn btn-block vk-button social-button">
                 <i class="fa fa-vk"></i> Sign in with VK
             </a>
         </div>
