--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
@@ -3,19 +3,30 @@
 <div class="container body-content">
     <div class="row container indent">
         <div class="card notification-setting-panel">
-            <form class="form-inline" name="NotificationForm">
-                <div class="form-group">
-                    <label for="time">Time:</label>
-                    <uib-timepicker id="time" class="form-control" ng-model="time" arrowkeys="false" show-spinners="false" show-meridian="false" required></uib-timepicker>
+            <div class="row">
+                <form class="form col-md-6" name="NotificationForm">
+                    <div class="form-group">
+                        <label for="time">Time:</label>
+                        <uib-timepicker id="time" class="form-control" ng-model="time" arrowkeys="false" show-spinners="false" show-meridian="false" required></uib-timepicker>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input id="email" class="form-control" type="email" ng-model="email" required>
+                    </div>
+
+                </form>
+                <div class="col-md-6 text-lg-center notification-status">
+                    <span>{{enableNotifications | notificationFilter}}</span>
                 </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input id="email" class="form-control" type="email" ng-model="email" required>
-                </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
                     <button type="submit" class="btn btn-primary form-control" ng-click="setData()">Set Notification Data</button>
                 </div>
-            </form>
+                <div class="form-group col-md-6">
+                    <button type="submit" class="btn btn-info form-control" ng-click="disableNotifications()">Disable Notifications</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
