Add responsive table.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Content/app/site.css
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Content/app/site.css
@@ -10,47 +10,37 @@ a {
     margin-bottom: 10px;
 }
 
-.product {
-    height: 100px;
-    max-height: 100px;
+.product-table {
+    width: 100%;
+    font-size: 16px;
+    border-collapse: separate;
+    border-spacing: 0 10px;
 }
 
-.product a, .product span {
-    display:table-cell; 
-    vertical-align: middle;
+.product-table tr {
+    width: 100px;
+    max-width: 100px;
 }
 
-.product span {
-    text-align: center;
-}
-
-.product div{
-    display: table;
-    table-layout: fixed;
-    height: 100px;
+.product-table td {
+    padding: 2px 10px;
 }
 
 .product-image {
-    max-width: 100px;
     max-height: 100px;
+    min-height: 100px;
+    max-width: 100px;
+    height: 100px;
+    text-align: center;
+}
+
+.product-image img{
+    max-height: 100px;
+    max-width: 100px;
 }
 
 .tracked {
     background: lightgreen;
-}
-
-.product-panel h5 {
-    text-align: center;
-}
-
-.product-panel i {
-    text-align: center;
-    font-size: 24px;
-}
-
-.product-panel i {
-    text-align: center;
-    font-size: 24px;
 }
 
 .remove-cross {
@@ -67,6 +57,19 @@ a {
 
 .add-plus:hover {
     color: darkgreen;
+}
+
+.icon-box {
+    width: 64px;
+    text-align: center;
+}
+
+.icon-box .fa {
+    font-size: 24px;
+}
+
+.price {
+    text-align: right;
 }
 
 .table-placeholder {
