--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/home.html
@@ -11,42 +11,40 @@
     </div>
     <div class="row">
         <div class="col-md-12" ng-switch="products == null">
-            <div class="panel panel-default product-panel" ng-switch-when="false">
-                <div class="panel-heading row">
-                    <div class="col-md-2 col-lg-offset-7">
-                        <h5>Lowest price</h5>
-                    </div>
-                    <div class="col-md-2">
-                        <h5>Highest price</h5>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div infinite-scroll="more()">
-                        <div ng-repeat="n in products track by $index">
-                            <div class="row">
-                                <div class="product indent" ng-class="{'tracked' : trackedIds.indexOf(n.id) > -1}">
-                                    <div class="col-md-2">
-                                        <img class="product-image" ng-src={{n.images.header}} ng-show="n.images.header">
-                                    </div>
-                                    <div class="col-md-5">
-                                        <a ng-href={{n.html_url}}>{{n.full_name}}</a>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <span>{{n.prices.min | currencyFilter:currentRate}}</span>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <span>{{n.prices.max | currencyFilter:currentRate}}</span>
-                                    </div>
-                                    <div class="col-md-1" ng-switch="trackedIds.indexOf(n.id) > -1">
-                                        <a class="add-plus" ng-switch-when="false" ng-click="addProduct(n.id)"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
-                                        <a class="remove-cross" ng-switch-when="true" ng-click="delProduct(n.id)"><i class="fa fa-times" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
+            <table class="product-table" ng-switch-when="false">
+                <thead>
+                <tr>
+                    <th>
+                    <th>
+                    <th class="price">Lowest price
+                    <th class="price">Highest price
+                </tr>
+                </thead>
+                <tbody infinite-scroll="more()">
+                    <tr  class="indent" ng-repeat="n in products track by $index" ng-class="{'tracked' : trackedIds.indexOf(n.id) > -1}">
+                        <td>
+                            <div class="product-image">
+                                <span class="placer"></span>
+                                <img ng-src={{n.images.header}} ng-show="n.images.header">
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        </td>
+                        <td>
+                            <a ng-href={{n.html_url}}>{{n.full_name}}</a>
+                        </td>
+                        <td class="price">
+                            <span>{{n.prices.min | currencyFilter:currentRate}}</span>
+                        </td>
+                        <td class="price">
+                            <span>{{n.prices.max | currencyFilter:currentRate}}</span>
+                        </td>
+                        <td class="icon-box" ng-switch="trackedIds.indexOf(n.id) > -1">
+                            <a class="add-plus" ng-switch-when="false" ng-click="addProduct(n.id)"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
+                            <a class="remove-cross" ng-switch-when="true" ng-click="delProduct(n.id)"><i class="fa fa-times" aria-hidden="true"></i></a>
+                        </td>
+
+                    </tr>
+                </tbody>
+            </table>
             <div ng-switch-when="true">
                 <div class="row">
                     <div class="col-md-12 text-lg-center">
@@ -54,7 +52,7 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
+</div>
 </div>
 
