--- a/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
+++ b/OnlinerNotifier/OnlinerNotifier.Web/app/views/account.html
@@ -49,7 +49,7 @@
                             </div>
                         </td>
                         <td>
-                            <a ng-href={{n.Product.Url}}>{{n.Product.Name | unsafe}}</a>
+                            <a ng-href={{n.Product.Url}}>{{n.Product.Name}}</a>
                         </td>
                         <td>
                             <span>{{n.Product.MinPrice | currencyFilter:currentRate}}</span>
