--- a/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@using System.Web.Optimization
-@using OnlinerNotifier.Enums
 @{
     Layout = null;
 }
@@ -14,7 +13,7 @@
     @Styles.Render("~/Content/font-awesome")
     @Styles.Render("~/Content/toastr")
     @Styles.Render("~/Content/site")
-    <title>Index</title>
+    <title>OnlinerNotifier</title>
 </head>
 <body>
     <div ng-view>
